@@ -478,4 +478,59 @@ class modRequest {
         }
         return $value;
     }
+
+    /**
+     * Get the true client IP. Returns an array of values:
+     * 
+     * * ip - The real, true client IP
+     * * suspected - The suspected IP, if not alike to REMOTE_ADDR
+     * * network - The client's network IP
+     *
+     * @access public
+     * @return array
+     */
+    public function getClientIp() {
+        $ip = '';
+        $ipAll = array(); // networks IP
+        $ipSus = array(); // suspected IP
+
+        $serverVariables = array(
+            'HTTP_X_FORWARDED_FOR',
+            'HTTP_X_FORWARDED',
+            'HTTP_X_CLUSTER_CLIENT_IP',
+            'HTTP_X_COMING_FROM',
+            'HTTP_FORWARDED_FOR',
+            'HTTP_FORWARDED',
+            'HTTP_COMING_FROM',
+            'HTTP_CLIENT_IP',
+            'HTTP_FROM',
+            'HTTP_VIA',
+            'REMOTE_ADDR',
+        );
+
+        foreach ($serverVariables as $serverVariable) {
+            $value = '';
+            if (isset($_SERVER[$serverVariable])) {
+                $value = $_SERVER[$serverVariable];
+            } elseif (getenv($serverVariable)) {
+                $value = getenv($serverVariable);
+            }
+
+            if (!empty($value)) {
+                $tmp = explode(',', $value);
+                $ipSus[] = $tmp[0];
+                $ipAll = array_merge($ipAll,$tmp);
+            }
+        }
+
+        $ipSus = array_unique($ipSus);
+        $ipAll = array_unique($ipAll);
+        $ip = (sizeof($ipSus) > 0) ? $ipSus[0] : $ip;
+
+        return array(
+            'ip' => $ip,
+            'suspected' => $ipSus,
+            'network' => $ipAll,
+        );
+    }
 }
