@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#4175] Add modRequest->getClientIp() for better IP handling
 - [#4217] Add rank field to modUserGroup
 - Update version to 2.1.0-rc-2
 - [#4173] Fix issues with math-related output filters and floats
